--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": ">=8.2",
         "ext-simplexml": "*",
+        "ext-iconv": "*",
         "simplesamlphp/simplesamlphp": "^2.3",
         "simplesamlphp/composer-module-installer": "^1.3"
     },
